--- a/charts/tarantool/test.yaml
+++ b/charts/tarantool/test.yaml
@@ -14,7 +14,7 @@ tarantool-operator:
 cartridge:
   tarantool:
     image:
-      repository: tarantool/examples-kv
+      repository: tarantool/example-kv
       tag: 1.0.0
       pullPolicy: IfNotPresent
 
