--- a/charts/tarantool/test.yaml
+++ b/charts/tarantool/test.yaml
@@ -14,8 +14,8 @@ tarantool-operator:
 cartridge:
   tarantool:
     image:
-      repository: tarantool/example-kv
-      tag: 1.0.0
+      repository: mlops-docker-releases.binary.alfabank.ru/tarantool-enterprise-docker
+      tag: 1.0
       pullPolicy: IfNotPresent
 
 
