--- a/charts/tarantool/test.yaml
+++ b/charts/tarantool/test.yaml
@@ -14,7 +14,7 @@ tarantool-operator:
 cartridge:
   tarantool:
     image:
-      repository: mlops-docker-releases.binary.alfabank.ru/tarantool-enterprise-docker
+      repository: ialexmlops/test-app
       tag: 1.0.0
       pullPolicy: IfNotPresent
 
