--- a/charts/tarantool/test.yaml
+++ b/charts/tarantool/test.yaml
@@ -14,8 +14,8 @@ tarantool-operator:
 cartridge:
   tarantool:
     image:
-      repository: ialexmlops/test-app
-      tag: 1.0.0
+      repository: ialexmlops/cartridge
+      tag: test
       pullPolicy: IfNotPresent
 
 
