--- a/charts/tarantool/test.yaml
+++ b/charts/tarantool/test.yaml
@@ -34,6 +34,8 @@ cartridge:
 
     roles:
       - name: storage
+        securityContext:
+          runAsUser: 1000
         replicasets: 2
         replicas: 2
         vshard:
@@ -49,6 +51,8 @@ cartridge:
 
 
       - name: router
+        securityContext:
+          runAsUser: 1000
         replicasets: 2
         replicas: 1
         service:
