--- a/charts/prometheus/test.yaml
+++ b/charts/prometheus/test.yaml
@@ -1,5 +1,6 @@
 prometheus:
-  ingress:
-    enabled: true
-    hosts:
-      - prometheus.alex.localhost
+   server:
+     ingress:
+       enabled: true
+       hosts:
+         - prometheus.alex.localhost
