--- a/charts/prometheus/test.yaml
+++ b/charts/prometheus/test.yaml
@@ -2,5 +2,6 @@ prometheus:
    server:
      ingress:
        enabled: true
+       pathType: ImplementationSpecific
        hosts:
          - prometheus.alex.localhost
