--- a/charts/prometheus/test.yaml
+++ b/charts/prometheus/test.yaml
@@ -2,6 +2,7 @@ prometheus:
    server:
      ingress:
        enabled: true
+       ingressClassName: nginx
        pathType: ImplementationSpecific
        hosts:
          - prometheus.alex.localhost
