--- a/charts/grafana/test.yaml
+++ b/charts/grafana/test.yaml
@@ -4,4 +4,4 @@ grafana:
     ingressClassName: nginx
     pathType: ImplementationSpecific
     hosts:
-      - prometheus.alex.localhost
+      - grafana.alex.localhost
