--- a/charts/jenkins/templates/docker-builder.yaml
+++ b/charts/jenkins/templates/docker-builder.yaml
@@ -17,6 +17,9 @@ spec:
       containers:
         - image: docker:24.0.5-dind-rootless
           name: docker-dind
+          command:
+            - sleep
+            - infinity
           env:
             - name: DOCKER_HOST
               value: tcp://0.0.0.0:2375
