Add docker builder

--- a/charts/jenkins/templates/docker-builder.yaml
+++ b/charts/jenkins/templates/docker-builder.yaml
@@ -17,7 +17,7 @@ spec:
       initContainers:
         - name: volume-mount-hack
           image: busybox
-          command: [ "sh", "-c", "chown -R root:rootless /home/rootless/.local/share/docker" ]
+          command: [ "sh", "-c", "chown -R 0:1000 /home/rootless/.local/share/docker" ]
           volumeMounts:
             - name: docker-dind-data-vol
               mountPath: /home/rootless/.local/share/docker
