Add docker builder

--- a/charts/jenkins/templates/docker-builder.yaml
+++ b/charts/jenkins/templates/docker-builder.yaml
@@ -34,7 +34,7 @@ spec:
               value: ""
           volumeMounts:
             - name: docker-dind-data-vol
-              mountPath: /home/rootless/.local/share/docker
+              mountPath: /var/lib/docker
           ports:
             - name: daemon-port
               containerPort: 2375
