Add docker builder

--- a/platform/test-values.yaml
+++ b/platform/test-values.yaml
@@ -68,7 +68,7 @@ services:
 
 
   metrics-server:
-    enable: true
+    enable: false
     valueFile: *environmentValues
     argoApplication:
       name: metrics-server
@@ -78,7 +78,7 @@ services:
 
 
   prometheus:
-    enable: true
+    enable: false
     valueFile: *environmentValues
     argoApplication:
       name: prometheus
@@ -88,10 +88,20 @@ services:
 
 
   grafana:
-    enable: true
+    enable: false
     valueFile: *environmentValues
     argoApplication:
       name: grafana
       namespace: grafana
       chart: charts/grafana
+    config:
+
+
+  longhorn:
+    enable: true
+    valueFile: *environmentValues
+    argoApplication:
+      name: longhorn
+      namespace: longhorn
+      chart: charts/longhorn
     config:
