--- a/charts/jenkins/templates/docker-builder.yaml
+++ b/charts/jenkins/templates/docker-builder.yaml
@@ -1,3 +1,4 @@
+{{ if eq true false }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -47,3 +48,4 @@ spec:
         - name: docker-dind-data-vol
           persistentVolumeClaim:
             claimName: docker-dind-data
+{{ end }}
