--- a/charts/minio/test.yaml
+++ b/charts/minio/test.yaml
@@ -5,3 +5,7 @@ minio:
     hostname: minio.alex.localhost
     path: /
     pathType: ImplementationSpecific
+
+  auth:
+    rootUser: admin
+    rootPassword: "admin"
