Add docker builder

--- a/platform/templates/argocd-ingress.yaml
+++ b/platform/templates/argocd-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.argo.ingressNginxEnabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -21,3 +22,4 @@ spec:
                 name: argocd-server
                 port:
                   number: 80
+{{ end -}}
