--- a/charts/istio-gateway/Chart.yaml
+++ b/charts/istio-gateway/Chart.yaml
@@ -1,12 +1,10 @@
 apiVersion: v2
-name: istio-gateway
+name: dognauts-istio-gateway
 description: A Helm chart for Kubernetes
-
 type: application
-version: 0.1.0
-appVersion: "1.16.0"
-
+version: 0.0.19
+appVersion: "1.0.0"
 dependencies:
   - name: gateway
-    version: 1.19.0-rc.0
+    version: 1.16.0
     repository: https://istio-release.storage.googleapis.com/charts
