Add docker builder

--- a/platform/test-values.yaml
+++ b/platform/test-values.yaml
@@ -107,7 +107,7 @@ services:
 
 
   grafana:
-    enable: false
+    enable: true
     valueFile: *environmentValues
     argoApplication:
       name: grafana
