--- a/platform/test-values.yaml
+++ b/platform/test-values.yaml
@@ -114,6 +114,7 @@ services:
       namespace: grafana
       chart: charts/grafana
     config:
+      grafana.ingress.enabled: false
 
 
   minio:
