Add docker builder

--- a/charts/grafana/test.yaml
+++ b/charts/grafana/test.yaml
@@ -8,3 +8,8 @@ grafana:
     pathType: ImplementationSpecific
     hosts:
       - grafana.alex.localhost
+
+istioRef:
+  grafana:
+    gateways: "istio-system/alexgateway"
+    hosts: "grafana.alex.localhost"
