--- a/charts/kiali/Chart.yaml
+++ b/charts/kiali/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: kiali-operator
+name: kiali
 description: A Helm chart for Kubernetes
 
 type: application
@@ -7,6 +7,6 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 dependencies:
-  - name: kiali-operator
+  - name: kiali-server
     version: 1.73.0
     repository: https://kiali.org/helm-charts
