--- a/platform/test-values.yaml
+++ b/platform/test-values.yaml
@@ -108,7 +108,7 @@ services:
 
 
   prometheus:
-    enable: false
+    enable: true
     valueFile: *environmentValues
     argoApplication:
       name: prometheus
