--- a/charts/prometheus/test.yaml
+++ b/charts/prometheus/test.yaml
@@ -1,7 +1,7 @@
 prometheus:
    server:
      ingress:
-       enabled: true
+       enabled: false
        ingressClassName: nginx
        pathType: ImplementationSpecific
        hosts:
