--- a/charts/kiali/test.yaml
+++ b/charts/kiali/test.yaml
@@ -4,4 +4,4 @@ kiali-server:
   external_services:
     prometheus:
       # Prometheus service name is "metrics" and is in the "telemetry" namespace
-      url: "http://prometheus.prometheus:9090/"
+      url: "http://prometheus-server.prometheus:80/"
