--- a/charts/mlflow/templates/mlflow-vs.yaml
+++ b/charts/mlflow/templates/mlflow-vs.yaml
@@ -1,15 +1,15 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: app
+  name: mlflow
 spec:
   hosts:
-    - "grafana.alex.localhost"
+    - "mlflow.alex.localhost"
   gateways:
-    - grafana-gateway
+    - app-gateway
   http:
     - route:
         - destination:
-            host: grafana
+            host: mlflow
             port:
-              number: 80
+              number: 5000
