--- a/charts/mlflow/templates/policy.yaml
+++ b/charts/mlflow/templates/policy.yaml
@@ -1,12 +1,13 @@
-apiVersion: security.istio.io/v1beta1
-kind: RequestAuthentication
+apiVersion: authentication.istio.io/v1alpha1
+kind: Policy
 metadata:
-  name: request-authentication
+  name: auth-policy
 spec:
-  jwtRules:
-    - forwardOriginalToken: true
-      issuer: "https://dev-kzyb4oxa1setftab.us.auth0.com/"
-      jwksUri: "https://dev-kzyb4oxa1setftab.us.auth0.com/.well-known/jwks.json"
-  selector:
-    matchLabels:
-      type-app: mlflow
+  targets:
+    - name: sa-web-app
+    - name: sa-feedback
+  origins:
+    - jwt:
+        issuer: "https://dev-kzyb4oxa1setftab.us.auth0.com/"
+        jwksUri: "https://dev-kzyb4oxa1setftab.us.auth0.com/.well-known/jwks.json"
+  principalBinding: USE_ORIGIN
