--- a/charts/mlflow/templates/policy.yaml
+++ b/charts/mlflow/templates/policy.yaml
@@ -1,13 +1,9 @@
-apiVersion: authentication.istio.io/v1alpha1
-kind: Policy
+apiVersion: security.istio.io/v1beta1
+kind: RequestAuthentication
 metadata:
   name: auth-policy
 spec:
-  targets:
-    - name: sa-web-app
-    - name: sa-feedback
-  origins:
-    - jwt:
-        issuer: "https://dev-kzyb4oxa1setftab.us.auth0.com/"
-        jwksUri: "https://dev-kzyb4oxa1setftab.us.auth0.com/.well-known/jwks.json"
-  principalBinding: USE_ORIGIN
+  jwtRules:
+    - forwardOriginalToken: true
+      issuer: "https://dev-kzyb4oxa1setftab.us.auth0.com/"
+      jwksUri: "https://dev-kzyb4oxa1setftab.us.auth0.com/.well-known/jwks.json"
