--- a/platform/templates/argocd-ingress.yaml
+++ b/platform/templates/argocd-ingress.yaml
@@ -23,3 +23,38 @@ spec:
                 port:
                   number: 80
 {{ end -}}
+
+---
+
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: argocd-gateway
+spec:
+  selector:
+    istio: ingressgateway
+  servers:
+    - port:
+        number: 80
+        name: http
+        protocol: HTTP
+      hosts:
+        - "*.alex.localhost"
+
+---
+
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: argocd
+spec:
+  hosts:
+    - "argocd.alex.localhost"
+  gateways:
+    - argocd-gateway
+  http:
+    - route:
+        - destination:
+            host: argocd-server
+            port:
+              number: 80
