Add airflow ingress istio

--- a/charts/airflow/test.yaml
+++ b/charts/airflow/test.yaml
@@ -13,7 +13,7 @@ airflow:
   ingress:
     enabled: true
     web:
-      enabled: true
+      enabled: false
       pathType: "ImplementationSpecific"
       host: "airflow.alex.localhost"
       ingressClassName: nginx
