--- a/platform/test-values.yaml
+++ b/platform/test-values.yaml
@@ -72,7 +72,7 @@ services:
 
 
   airflow:
-    enable: false
+    enable: true
     valueFile: *environmentValues
     argoApplication:
       name: airflow
