Add airflow ingress istio

--- a/charts/airflow/templates/istio.yaml
+++ b/charts/airflow/templates/istio.yaml
@@ -23,7 +23,7 @@ spec:
   hosts:
     - "airflow.alex.localhost"
   gateways:
-    - airflow-gateway
+    - mlflow/mlflow-gateway
   http:
     - route:
         - destination:
