Add airflow ingress istio

--- a/platform/test-values.yaml
+++ b/platform/test-values.yaml
@@ -61,7 +61,7 @@ services:
 
 
   jenkins:
-    enable: false
+    enable: true
     istioEnabled: true
     valueFile: *environmentValues
     argoApplication:
