feature: Add something

--- a/argocd/values.yaml
+++ b/argocd/values.yaml
@@ -1,4 +1,7 @@
-#argo-cd:
-#  configs:
-#    secret:
-#      argocdServerAdminPassword: "$2y$10$fRp1Efm9lausaY09CHQ8qumwuu.nyDaw.erqGH4/XR911jX6GIXcK"
+argo-cd:
+  configs:
+    repositories:
+      main-platform-repo:
+        url: https://github.com/iAlexMlops/MLPlatform.git
+        name: Main platform repository
+        type: git
