feature: Add something

--- a/platform/templates/virtualservice.yaml
+++ b/platform/templates/virtualservice.yaml
@@ -6,7 +6,7 @@ spec:
   hosts:
     - "argocd.alex.localhost"
   gateways:
-    - argocd-gateway
+    - platform-gateway
   http:
     - route:
         - destination:
