feature: Add something

--- a/platform/templates/gateway.yaml
+++ b/platform/templates/gateway.yaml
@@ -6,9 +6,12 @@ spec:
   selector:
     istio: ingressgateway
   servers:
-    - port:
-        number: 80
-        name: http
-        protocol: HTTP
-      hosts:
-        - "*.alex.localhost"
+    - hosts:
+        - '*.alex.localhost'
+      port:
+        name: https
+        number: 443
+        protocol: HTTPS
+      tls:
+        mode: SIMPLE
+        credentialName: "argocd-secret"
