--- a/platform/templates/gateway.yaml
+++ b/platform/templates/gateway.yaml
@@ -14,4 +14,4 @@ spec:
         protocol: HTTPS
       tls:
         mode: SIMPLE
-        credentialName: "argocd-secret"
+        credentialName: "platform-secret"
