feature: Add something

--- a/platform/values.yaml
+++ b/platform/values.yaml
@@ -98,3 +98,11 @@ services:
 
 
   # Common
+  app:
+    enable: true
+    valueFile: *environmentValues
+    argoApplication:
+      name: minio
+      namespace: minio
+      chart: charts/minio
+    config:
