--- a/platform/templates/gateway.yaml
+++ b/platform/templates/gateway.yaml
@@ -2,13 +2,25 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: platform-gateway
+  namespace: istio-system
 spec:
   selector:
     istio: ingressgateway
   servers:
-    - port:
-        number: 80
+    - hosts:
+        - '*.alex.localhost'
+      port:
+        number: 443
+        name: https
+        protocol: HTTPS
+      tls:
+        mode: SIMPLE
+        credentialName: platform-certificate
+    - hosts:
+        - '*.alex.localhost'
+      port:
         name: http
+        number: 80
         protocol: HTTP
-      hosts:
-        - "*.alex.localhost"
+      tls:
+        httpsRedirect: true
